# hopsflow

./: .buildinfo  .gitignore  LICENSE  build.py  flake.nix  gaussflow.py  gaussflow_two.py  genindex.html  hopsflow.py  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.md  requirements.txt  search.html  searchindex.js  setup.py  util.py
.github/workflows/: default.yml
_modules/: index.html
_modules/hopsflow/: gaussflow.html  hopsflow.html  util.html
_sources/modules/: gaussflow.rst.txt  util.rst.txt
docs/source/: conf.py  index.rst
docs/source/modules/: hopsflow.rst
hopsflow/: gaussflow.py  gaussflow_two.py  gaussflow_two_formulas.pyx  hopsflow.py  pyrightconfig.json  util.py
modules/: gaussflow.html  hopsflow.html  util.html
python/energy_flow_proper/hopsflow/: __init__.py  gaussflow.py  hopsflow.py  setup.cfg  util.py
python/energy_flow_proper/hopsflow/docs/source/: conf.py
