[tool.poetry]
name = "hopsflow"
version = "1.0.4"
description = "Calculating open system bath energy changes with HOPS and analytically."
authors = ["Valentin Boettcher <hiro at protagon.space>"]
license = "MIT"
repository = "https://github.com/vale981/hopsflow"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
sqlitedict = "^1.7.0"
numpy = "^1.20.0"
scipy = "^1.7.3"
stocproc = { git = "https://github.com/vale981/stocproc" }
tqdm = "^4.62.3"
lmfit = "^1.0.3"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
Sphinx = "^4.3.1"
pydata-sphinx-theme = "^0.7.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
